--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -53,6 +53,11 @@ li{
 	height: 20px;
 }
 
+.titleClass
+{
+	font-size: 20px !important;
+}
+
 li:nth-child(odd) {
   background-color: #ccc;
 }
@@ -78,4 +83,24 @@ a:hover {
 a:active {
     text-decoration: underline;
     color: #2b2e58;
+}
+
+button {
+    background-color: #086c32;
+    border: none;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 5px;
+}
+input[type=text]{
+    background: transparent url(http://html-generator.weebly.com/files/theme/input-text-8.png) repeat-x; 
+    border: 1px solid #999; 
+    outline:0; 
+    height:25px; 
+    width: 250px; 
+    border-radius: 5px;
 }
